<resources>
    <string name="app_name">Movtick</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui \nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan \nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk \ntransaksi tiket nonton</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="username_hint">sabrina</string>
    <string name="password">Password</string>
    <string name="password_hint">******</string>
    <string name="name">Name</string>
    <string name="name_hint">Sabrina Sabian</string>
    <string name="email_address">Email Address</string>
    <string name="email_hint">sabrian@movtick.apps</string>
    <string name="photo">Photo</string>
    <string name="welcome_text">Welcome,\nReval Fahmi Aziz</string>
    <string name="save">Save</string>
    <string name="upload_later">Upload Later</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="storyboard">Storyboard</string>
    <string name="whos_played">Actors</string>
    <string name="choose_seat">Choose Seat</string>
    <string name="movie_screen">Movie Screen</string>
    <string name="booked">Booked</string>
    <string name="empty">Empty</string>
    <string name="selected">Selected</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="items">Items</string>
    <string name="date_and_time">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="totals">Totals</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="pay_now">Pay Now</string>
    <string name="cancel">Cancel</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="happy_watching_desc">Tiket telah berhasil dibeli dan \nselamat menikmati film</string>
    <string name="see_ticket">See Ticket</string>
    <string name="back_to_home">Back To Home</string>
    <string name="today">Todays</string>
    <string name="scan_qr">Scan QR</string>
    <string name="quick_print">Quick Print</string>
    <string name="setting">Settings</string>
    <string name="keep_it_up">Keep it up to date</string>
    <string name="my_wallet">My Wallet</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_language">Change Language</string>
    <string name="help">Help</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>